gitops/apps/frontend/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: workloads
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: frontend
          resources:
            requests:
              cpu: 150m
              memory: 192Mi
            limits:
              cpu: 300m
              memory: 384Mi
